--- a/src/components/StyleCurrency.css
+++ b/src/components/StyleCurrency.css
@@ -1,1 +1,1 @@
-.hover_color:hover { background-color: red; border:1px solid red }
+.hover_color:hover { background-color: red; border:1px solid rgb(107, 46, 46) }
